web commit by GarryWertu

--- a/wiki/trunk/hacking.mdwn
+++ b/wiki/trunk/hacking.mdwn
@@ -390,4 +390,4 @@ libqof2, the aim is to get all those done in libqof1.</p>
 
 ----
 
-[[ikiwiki/WikiLink]]
+[[ikiwiki/WikiLink]] | <a href="http://topmoviedownloads.org/">Movie Downloads</a> | <a href="http://newtvshowsonline.org/">New TV Shows</a>
