--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -321,4 +321,4 @@ Last updated by Neil Williams &lt;linux@codehelp.co.uk&gt; May 2009.
 
 [[ikiwiki/WikiLink]]
 
-(http://lasvegasescort.com) Services. This site is powered by [ikiwiki](http://ikiwiki.info). It is designed by [Web design company](http://www.eluneart.com).
+(http://lasvegasescort.com) Services. This site is powered by [ikiwiki](http://ikiwiki.info). It is designed by [Web design company](http://www.eluneart.com) [Web hosting](http://webspacehosting.com).
