web commit by Anan

--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -22,6 +22,9 @@ symbol of the same name">
 <li><a href="#support">Support</a></li>
 <li><a href="http://www.iro.umontreal.ca/translation/registry.cgi?domain=qof">
 Translation</a></li>
+<li><a href="http://custom-essay-writing-service.org/index.php">
+Essay</a></li>
+
 </ul>
 </div>
 
