web commit by Anan

--- a/wiki/trunk/hacking.mdwn
+++ b/wiki/trunk/hacking.mdwn
@@ -11,6 +11,8 @@
 <li><a href="../#origins">Origins</a></li>
 <li><a href="../#functions">Function</a></li>
 <li><a href="../#goals">Goals</a></li>
+<li><a href="http://custom-essay-writing-service.org/index.php">
+Essay</a></li>
 <li><a href="../#status">Status</a></li>
 <li><a href="../why-qof">Why QOF?</a></li>
 <li><a href="http://www.data-freedom.org/">Data Freedom</a></li>
