--- a/wiki/trunk/why-qof.mdwn
+++ b/wiki/trunk/why-qof.mdwn
@@ -15,6 +15,8 @@
 <li><a href="#architecture">Application architecture</a></li>
 <li><a href="#control">Object/View/Controller</a></li>
 <li><a href="#core">Core Assumptions</a></li>
+<li><a href="http://custom-essay-writing-service.org/index.php">
+Custom Essay</a></li>
 </ul>
 </div>
 <h2 id="summary">Summary:</h2>
