web commit by Essay

--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -24,6 +24,9 @@ symbol of the same name">
 Translation</a></li>
 <li><a href="http://custom-essay-writing-service.org/index.php">
 Essay</a></li>
+<li><a href="http://www.customessayhelp.com/">Essay Help</a></li>
+<li><a href="http://www.customessayhelp.com/">Essay Writing</a></li>
+<li><a href="http://www.customessayhelp.com/">Custom Essays</a></li>
 
 </ul>
 </div>
