--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -311,6 +311,7 @@ Some projects currently using QOF are:
 * <a href="http://pilot-qof.sourceforge.net/">pilot-qof</a> (Query Palm databases).
 * <a href="http://dwi.sourceforge.net/">DWI</a> (Data With Interaction).
 * <a href="http://uk.bestessays.com">Essay</a> project status - online research.
+* <a href="http://www.customessayhelp.com">Essay Help</a> Detailed Research Conduction.
 * <a href="http://cashutil.sourceforge.net/">CashUtil</a> (the gnucash command line interface).
 * <a href="http://gpe-expenses.sourceforge.net/">gpe-expenses</a> for embedded devices like iPAQs.
 
