web commit by Essay

--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -27,6 +27,9 @@ Essay</a></li>
 <li><a href="http://www.customessayhelp.com/">Essay Help</a></li>
 <li><a href="http://www.customessayhelp.com/">Essay Writing</a></li>
 <li><a href="http://www.customessayhelp.com/">Custom Essays</a></li>
+<li><a href="http://www.essaymojo.co.uk/">Essay Service</a></li>
+<li><a href="http://www.essaymojo.co.uk/">Custom Writing</a></li>
+<li><a href="http://www.essaymojo.co.uk/">Buy Essay</a></li>
 
 </ul>
 </div>
