web commit by AlbertF

--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -30,6 +30,8 @@ Essay</a></li>
 <li><a href="http://www.essaymojo.co.uk/">Essay Service</a></li>
 <li><a href="http://www.essaymojo.co.uk/">Custom Writing</a></li>
 <li><a href="http://www.essaymojo.co.uk/">Buy Essay</a></li>
+<li><a href="http://www.mooladays.com">Make Money Online</a><li>
+<li><a href="http://www.hostdays.com">Web Hosting Reviews</a><li>
 
 </ul>
 </div>
