--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -29,6 +29,7 @@ Essay</a></li>
 <li><a href="http://www.customessayhelp.com/">Custom Essays</a></li>
 <li><a href="http://www.essaymojo.co.uk/">Essay Service</a></li>
 <li><a href="http://www.essaymojo.co.uk/">Custom Writing</a></li>
+<li><a href="http://virb.com/p90x">P90X</a><li>
 <li><a href="http://www.essaymojo.co.uk/">Buy Essay</a></li>
 <li><a href="http://www.mooladays.com">Make Money Online</a><li>
 <li><a href="http://www.hostdays.com">Web Hosting Reviews</a><li>
