web commit by Essay

--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -34,6 +34,7 @@ Essay</a></li>
 <li><a href="http://www.allwritingsource.co.uk/">Essay Writing UK</a></li>
 <li><a href="http://www.mooladays.com">Make Money Online</a><li>
 <li><a href="http://www.hostdays.com">Web Hosting Reviews</a><li>
+<li><a href="http://www.easyessayhelp.com/">Essay Writing Help</a></li>
 
 </ul>
 </div>
