--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -27,6 +27,7 @@ Essay</a></li>
 <li><a href="http://www.customessayhelp.com/">Essay Help</a></li>
 <li><a href="http://www.customessayhelp.com/">Essay Writing</a></li>
 <li><a href="http://www.customessayhelp.com/">Custom Essays</a></li>
+<li><a href="http://www.omnibet.ro/biletul-zilei-pariuri-fotbal/">Biletul Zilei Fotbal</a></li>
 <li><a href="http://www.essaymojo.co.uk/">Essay Service</a></li>
 <li><a href="http://www.essaymojo.co.uk/">Custom Writing</a></li>
 <li><a href="http://www.scoreboardfitness.com/programs/p90x_workout.html">PX90</a><li>
@@ -34,6 +35,7 @@ Essay</a></li>
 <li><a href="http://www.allwritingsource.co.uk/">Essay Writing UK</a></li>
 <li><a href="http://www.mooladays.com">Make Money Online</a><li>
 <li><a href="http://www.hostdays.com">Web Hosting Reviews</a><li>
+<li><a href="http://www.omnibet.ro/">Pariuri Sportive Online</a><li>
 <li><a href="http://www.easyessayhelp.com/">Essay Writing Help</a></li>
 
 </ul>
