--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -33,9 +33,9 @@ Essay</a></li>
 <li><a href="http://www.scoreboardfitness.com/programs/p90x_workout.html">PX90</a><li>
 <li><a href="http://www.essaymojo.co.uk/">Buy Essay</a></li>
 <li><a href="http://www.allwritingsource.co.uk/">Essay Writing UK</a></li>
-<li><a href="http://www.mooladays.com">Make Money Online</a><li>
-<li><a href="http://www.hostdays.com">Web Hosting Reviews</a><li>
-<li><a href="http://www.omnibet.ro/">Pariuri Sportive Online</a><li>
+<li><a href="http://www.mooladays.com">Make Money Online</a></li>
+<li><a href="http://www.hostdays.com">Web Hosting Reviews</a></li>
+<li><a href="http://www.omnibet.ro/">Pariuri Sportive Online</a></li>
 <li><a href="http://www.easyessayhelp.com/">Essay Writing Help</a></li>
 
 </ul>
