--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -30,7 +30,7 @@ Essay</a></li>
 <li><a href="http://www.omnibet.ro/biletul-zilei-pariuri-fotbal/">Biletul Zilei Fotbal</a></li>
 <li><a href="http://www.essaymojo.co.uk/">Essay Service</a></li>
 <li><a href="http://www.essaymojo.co.uk/">Custom Writing</a></li>
-<li><a href="http://www.scoreboardfitness.com/programs/p90x_workout.html">PX90</a><li>
+<li><a href="http://www.scoreboardfitness.com/programs/p90x_workout.html">PX90</a></li>
 <li><a href="http://www.essaymojo.co.uk/">Buy Essay</a></li>
 <li><a href="http://www.allwritingsource.co.uk/">Essay Writing UK</a></li>
 <li><a href="http://www.mooladays.com">Make Money Online</a></li>
