--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -27,15 +27,14 @@ Essay</a></li>
 <li><a href="http://www.customessayhelp.com/">Essay Help</a></li>
 <li><a href="http://www.customessayhelp.com/">Essay Writing</a></li>
 <li><a href="http://www.customessayhelp.com/">Custom Essays</a></li>
-<li><a href="http://www.omnibet.ro/biletul-zilei-pariuri-fotbal/">Biletul Zilei Fotbal</a></li>
 <li><a href="http://www.essaymojo.co.uk/">Essay Service</a></li>
 <li><a href="http://www.essaymojo.co.uk/">Custom Writing</a></li>
-<li><a href="http://www.scoreboardfitness.com/programs/p90x_workout.html">PX90</a></li>
+<li><a href="http://www.scoreboardfitness.com/programs/p90x_workout.html">PX90</a><li>
 <li><a href="http://www.essaymojo.co.uk/">Buy Essay</a></li>
 <li><a href="http://www.allwritingsource.co.uk/">Essay Writing UK</a></li>
-<li><a href="http://www.mooladays.com">Make Money Online</a></li>
-<li><a href="http://www.hostdays.com">Web Hosting Reviews</a></li>
-<li><a href="http://www.omnibet.ro/">Pariuri Sportive Online</a></li>
+<li><a href="http://www.mooladays.com">Make Money Online</a><li>
+<li><a href="http://www.all-auto.ro/piese-auto">piese auto ieftine</a><li>
+<li><a href="http://www.hostdays.com">Web Hosting Reviews</a><li>
 <li><a href="http://www.easyessayhelp.com/">Essay Writing Help</a></li>
 
 </ul>
@@ -323,6 +322,7 @@ Some projects currently using QOF are:
 * <a href="http://uk.bestessays.com">Essay</a> project status - online research.
 * <a href="http://www.customessayhelp.com">Essay Help</a> Detailed Research Conduction.
 * <a href="http://cashutil.sourceforge.net/">CashUtil</a> (the gnucash command line interface).
+* <a href="http://www.all-auto.ro/auto-second-hand">vanzari auto</a>
 * <a href="http://gpe-expenses.sourceforge.net/">gpe-expenses</a> for embedded devices like iPAQs.
 
 
