web commit by Essay

--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -38,6 +38,7 @@ Essay</a></li>
 <li><a href="http://www.all-auto.ro/piese-auto">piese auto ieftine</a></li>
 <li><a href="http://www.hostdays.com">Web Hosting Reviews</a><li>
 <li><a href="http://www.easyessayhelp.com/">Essay Writing Help</a></li>
+<li><a href="http://www.easydissertationhelp.com/">Dissertaion Help</a></li>
 
 </ul>
 </div>
