--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -36,6 +36,7 @@ Essay</a></li>
 <li><a href="http://www.omnibet.ro/">Pariuri Sportive Online</a></li>
 <li><a href="http://www.mooladays.com">Make Money Online</a></li>
 <li><a href="http://www.all-auto.ro/piese-auto">piese auto ieftine</a></li>
+<li><a href="http://www.uzoom.com.au/about-us">campervan hire australia</a></li>
 <li><a href="http://www.hostdays.com">Web Hosting Reviews</a><li>
 <li><a href="http://www.easyessayhelp.com/">Essay Writing Help</a></li>
 <li><a href="http://www.easydissertationhelp.com/">Dissertaion Help</a></li>
