web commit by jordan

--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -34,12 +34,11 @@ Essay</a></li>
 <li><a href="http://www.essaymojo.co.uk/">Buy Essay</a></li>
 <li><a href="http://www.allwritingsource.co.uk/">Essay Writing UK</a></li>
 <li><a href="http://www.omnibet.ro/">Pariuri Sportive Online</a></li>
-<li><a href="http://www.mooladays.com">Make Money Online</a></li>
-<li><a href="http://www.all-auto.ro/piese-auto">piese auto ieftine</a></li>
-<li><a href="http://www.uzoom.com.au/about-us">campervan hire australia</a></li>
-<li><a href="http://www.hostdays.com">Web Hosting Reviews</a><li>
-<li><a href="http://www.easyessayhelp.com/">Essay Writing Help</a></li>
-<li><a href="http://www.easydissertationhelp.com/">Dissertaion Help</a></li>
+<li><a href="http://www.biletul-zilei.net">Biletul Zilei</a></li>
+<li><a href="http://www.tipseri.net">Pariuri Sportive</a></li>
+<li><a href="http://www.tipseri.net/casapariurilor/">casa Pariurilor</a><li>
+<li><a href="http://www.pariloto.net">Pariuri</a></li>
+<li><a href="http://www.biletul-zilei.info">Biletul Zilei</a></li>
 
 </ul>
 </div>
