web commit by designer

--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -25,6 +25,10 @@ Translation</a></li>
 <li><a href="http://custom-essay-writing-service.org/index.php">
 Essay</a></li>
 <li><a href="http://www.customessayhelp.com/">Essay Help</a></li>
+<li><a href="http://www.realdissertationwriting.com/">Dissertation</a></li>
+<li><a href="http://www.realessaywriting.com/">Essay</a></li>
+<li><a href="http://www.realthesiswriting.com/">Thesis</a></li>
+<li><a href="http://www.realassignmentwriting.com/">Assignment</a></li>
 <li><a href="http://www.customessayhelp.com/">Essay Writing</a></li>
 <li><a href="http://www.customessayhelp.com/">Custom Essays</a></li>
 <li><a href="http://www.essaymojo.co.uk/">Essay Service</a></li>
