--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -19,6 +19,8 @@ symbol of the same name">
 <li><a href="#status">Status</a></li>
 <li><a href="/why-qof">Why QOF?</a></li>
 <li><a href="http://www.data-freedom.org/">Data Freedom</a></li>
+<li><a href="http://www.designerevaluation.com/web-design/">Web Design</a></li>
+<li><a href="http://www.designerevaluation.com/logo-design/">Logo Design</a></li>
 <li><a href="#support">Support</a></li>
 <li><a href="http://www.iro.umontreal.ca/translation/registry.cgi?domain=qof">
 Translation</a></li>
