web commit by http://aaronkolodjski.myopenid.com/

--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -278,6 +278,8 @@ QOF 0.8.1 is available in the official repository of Gentoo Linux.
 
 ### RPM packages
 
+[web hosting](http://webspacehosting.com)
+
 There is an <a href="http://www.eluneart.com">website design</a>
 sample .spec file available in QOF CVS, available via
 <a href="http://cvs.sourceforge.net/viewcvs.py/qof/qof/rpm/">SourceForge</a>.<a href="http://www.mustuniversity.com/programs/degree/bachelors-degree.html">Bachelors degrees</a>
