web commit by butterfink

--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -23,6 +23,8 @@ symbol of the same name">
 <li><a href="http://www.designerevaluation.com/logo-design/">Logo Design</a></li>
 <li><a href="#support">Support</a></li>
 <li><a href="http://www.iro.umontreal.ca/translation/registry.cgi?domain=qof">
+<li><a href="http://www.lpnclasstrainingonline.com/lpn-training-online-benefits-and-pitfalls/5/">LPN training</a>
+<li><a href="http://www.cnaonlineclasstraining.com/cnacertification/30/">cna certification</a>
 Translation</a></li>
 
 
