--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -305,12 +305,11 @@ Some projects currently using QOF are:
 * <a href="http://gttr.sourceforge.net">GnoTime</a> (Gnome Time Tracker).
 * <a href="http://www.gnucash.org">GnuCash</a> - modified source.
 * <a href="http://www.globalofw.com">Ofw</a> - online source.
+* <a href="http://www.youronlinetipsource.com">make money online</a>
 
 * <a href="http://gpe-expenses.sourceforge.net/">gpe-expenses</a> for embedded devices like iPAQs.
 
-<div class="dnn_dnnContent" style="margin-left: -438px;"><a href="http://www.youronlinetipsource.com/">make money online</a></div>
-<div class="dnn_dnnContent" style="margin-left: -438px;"><a href="http://www.youronlinetipsource.com/">work from home</a></div>
-<div class="dnn_dnnContent" style="margin-left: -438px;"><a href="http://www.youronlinetipsource.com/">internet tips</a></div>
+
 
 
 
