--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -327,4 +327,4 @@ Last updated by Neil Williams &lt;linux@codehelp.co.uk&gt; May 2009.
 
 [[ikiwiki/WikiLink]]
 
-(http://lasvegasescort.com) Services. This site is powered by [ikiwiki](http://ikiwiki.info).  
+[make money online](http://www.youronlinetipsource.com).  
