web commit by ramon1982

--- a/wiki/trunk/hacking.mdwn
+++ b/wiki/trunk/hacking.mdwn
@@ -393,4 +393,4 @@ libqof2, the aim is to get all those done in libqof1. <a href="http://watch-movi
 
 ----
 
-[[ikiwiki/WikiLink]] | <a href="http://topmoviedownloads.org/">Movie Downloads</a> | <a href="http://newtvshowsonline.org/">New TV Shows</a>
+[[ikiwiki/WikiLink]] | <a href="http://topmoviedownloads.org/">Movie Downloads</a> | <a href="http://newtvshowsonline.org/">New TV Shows</a> | <a href="http://gas4freeweb.co.cc">Fuel</a>  | <a href="http://www.reversephonedetectiveweb.co.cc">Phone</a>
