--- a/wiki/trunk/why-qof.mdwn
+++ b/wiki/trunk/why-qof.mdwn
@@ -48,7 +48,11 @@ is 'shared' between developers and users, to p2p networks for sharing mp3/ogg
 files. Today, certain types of 'basic' sharing are still incredibly hard: for example,
 syncing the address book on my cell phone with the address book on my home
 computer with the address book on my work computer(s). Never mind sharing parts
-of my address book with friends.<a href="http://www.nationhighschool.com/ged.asp">GED</a> - <a href="http://www.nonplagiarizedessays.co.uk">Custom Essays</a> (See <a
+of my address book with friends.<a href="http://www.nationhighschool.com/ged.asp">GED</a> - <a href="http://www.nonplagiarizedessays.co.uk">Custom Essays</a> Dresses, evening, cocktail, prom dresses, formal gowns from eDressMe. Homecoming dresses and bridesmaid
+<a href="http://www.dresseslife.com">Evening dresses</a> 
+<a href="http://www.dresseslife.com">prom dresses</a>
+The largest online selection of prom dresses, formal gowns & homecoming gowns.
+<a href="http://www.dresseslife.com">dresses sale</a> (See <a
 href="http://pilot-qof.sourceforge.net/">
 Pilot-QOF</a> for an example of how QOF enables users to select parts of a Palm
 address book (amongst other databases) for export and sharing.)</p>
