web commit by http://rezultate.myopenid.com/

--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -16,6 +16,7 @@ symbol of the same name">
 <li><a href="#origins">Origins</a></li>
 <li><a href="#functions">Function</a></li>
 <li><a href="#goals">Goals</a></li>
+<li><a href="http://www.omnibet.ro/">Pariuri Sportive</a></li>
 <li><a href="#status">Status</a></li>
 <li><a href="/why-qof">Why QOF?</a></li>
 <li><a href="http://computer-lautsprecher.net/">Computer Boxen</a></li>
