web commit by http://masini.myopenid.com/

--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -24,6 +24,7 @@ symbol of the same name">
 <li><a href="http://www.designerevaluation.com/web-design/">Web Design</a></li>
 <li><a href="http://www.designerevaluation.com/logo-design/">Logo Design</a></li>
 <li><a href="#support">Support</a></li>
+<li><a href="http://www.all-auto.ro/piese-auto">piese auto import</a></li>
 <li><a href="http://www.iro.umontreal.ca/translation/registry.cgi?domain=qof">
 <li>Translation</a></li>
 
