--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -332,3 +332,4 @@ Last updated by Neil Williams &lt;linux@codehelp.co.uk&gt; May 2009.
 [[ikiwiki/WikiLink]]
 
 [make money online](http://www.youronlinetipsource.com).  
+[vanzari auto](http://www.all-auto.ro/auto-second-hand).
