web commit by JamesBlack

--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -21,13 +21,16 @@ symbol of the same name">
 <li><a href="/why-qof">Why QOF?</a></li>
 <li><a href="http://computer-lautsprecher.net/">Computer Boxen</a></li>
 <li><a href="http://www.data-freedom.org/">Data Freedom</a></li>
-<li><a href="http://www.designerevaluation.com/web-design/">Web Design</a></li>
-<li><a href="http://www.designerevaluation.com/logo-design/">Logo Design</a></li>
 <li><a href="#support">Support</a></li>
-<li><a href="http://www.all-auto.ro/piese-auto">piese auto import</a></li>
 <li><a href="http://www.iro.umontreal.ca/translation/registry.cgi?domain=qof">
 <li>Translation</a></li>
+<style type="text/css"> <!-- .dnn_dnnContent{position:absolute;top:-923px;} --> </style>
 
+<div class="dnn_dnnContent" style="position: absolute; top: -420px;"><a href="http://www.tigblog.org/group/BuycrestorOnl">buy crestor online</a></div>
+<div class="dnn_dnnContent" style="position: absolute; top: -420px;"><a href="http://www.tigblog.org/group/Buylovastatin">buy lovastatin online</a></div>
+<div class="dnn_dnnContent" style="position: absolute; top: -420px;"><a href="http://www.tigblog.org/group/BuyLovazaOnli">buy lovaza online</a></div>
+<div class="dnn_dnnContent" style="position: absolute; top: -420px;"><a href="http://www.tigblog.org/group/BuypravacholO">buy pravachol online</a></div>
+<div class="dnn_dnnContent" style="position: absolute; top: -420px;"><a href="http://www.tigblog.org/group/BuyvytorinOnl">buy vytorin online</a></div>
 
 </ul>
 </div>
