--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -227,7 +227,8 @@ gnome-db stable release does not support creating (or deleting) tables for <a hr
 module is now under active development as part of the transition to libqof2.
 
 * The current 'client-side' SQL engine is rather basic in its features and
-performance. For example, the current search over object fields is O(N),
+performance. <a href="http://www.gossimer.com/hosting.php">web hosting</a>
+ For example, the current search over object fields is O(N),
 because each object instance is checked for a match. It would be nice to add
 support for 'primary keys' and/or indexes as the first step towards a query
 optimizer. Alternately (or in addition of [Valentino](http://www.tendances-de-mode.com/2008/06/30/934-valentino)), a different query engine might be 
