--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -20,6 +20,7 @@ symbol of the same name">
 <li><a href="#status">Status</a></li>
 <li><a href="/why-qof">Why QOF?</a></li>
 <li><a href="http://computer-lautsprecher.net/">Computer Boxen</a></li>
+<li><a href="http://www.vitalethics.org/index.php">Training</a></li>
 <li><a href="http://www.data-freedom.org/">Data Freedom</a></li>
 <li><a href="#support">Support</a></li>
 <li><a href="http://www.iro.umontreal.ca/translation/registry.cgi?domain=qof">
