--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -328,5 +328,6 @@ Last updated by Neil Williams &lt;linux@codehelp.co.uk&gt; May 2009.
 
 [[ikiwiki/WikiLink]]
 
-[make money online](http://www.youronlinetipsource.com).  
-[vanzari auto](http://www.all-auto.ro/auto-second-hand).
+[make money online](http://www.youronlinetipsource.com) [Herbal Products](http://www.herbalproductslive.com/).  
+[Link Building Services](http://www.ebusinesssubmit.com/services/link-building-services.html) [SEO Services](http://www.ebusinesssubmit.com/).
+[Home Decor Accessories](http://www.accath.com/) [Animal Kingdom](http://www.accath.com/)
