--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -15,11 +15,8 @@ symbol of the same name">
 <li><a href="#origins">Origins</a></li>
 <li><a href="#functions">Function</a></li>
 <li><a href="#goals">Goals</a></li>
-<li><a href="http://www.omnibet.ro/">Pariuri Sportive</a></li>
 <li><a href="#status">Status</a></li>
 <li><a href="/why-qof">Why QOF?</a></li>
-<li><a href="http://computer-lautsprecher.net/">Computer Boxen</a></li>
-<li><a href="http://www.data-freedom.org/">Data Freedom</a></li>
 <li><a href="#support">Support</a></li>
 <li><a href="http://www.iro.umontreal.ca/translation/registry.cgi?domain=qof">
 <li>Translation</a></li>
@@ -45,7 +42,7 @@ different report.
 
 The idea behind QOF is to provide a generic framework so that
 any query can be executed, including queries designed by the end-user.
-Normally, this is possible only if you use a database that supports SQL and <a href="http://www.lpnclasstrainingonline.com/lpn-training-online-benefits-and-pitfalls/5/">LPN training</a>,
+Normally, this is possible only if you use a database that supports SQL and 
 then only if you deeply embed the database into your application. QOF provides
 simpler, more natural way to work with objects.
 
@@ -183,7 +180,7 @@ Below are some concrete project goals.
 
 See <a href="why-qof.html">&quot;Why QOF?&quot;</a> for the more abstract ideas
 behind QOF, including the relationships between &quot;database-driven&quot;,
-&quot;program-driven&quot; and &quot;data-centric&quot; <a href="http://www.vitalethics.org/technician-tech-schools-programs/pharmacy-4/how-to-become-a-pharmacist">program</a>ming explored at
+&quot;program-driven&quot; and &quot;data-centric&quot; ming explored at
 <a href="http://www.data-freedom.org/explain.html">Data-Freedom.org</a>.
 
 * Provide an object framework that allows progammers to create expressive
@@ -209,7 +206,7 @@ needed, tend to have terrible performance profiles, since the user must wait for
 the query to complete and return data in papers. In other words, QOF provides
 scalability: instead of the all-or-nothing approach, it provides a middle
 ground, allowing small fast apps to access huge databases.
-<a style="position: absolute; top: -418px" href="http://www.loadedmovies.com/">download action movies</a>
+
  *Status:* The GnuCash backend provides access to file and to SQL
 storage. However, not all of this code has been abstracted out in a generic way
 to be brought back into QOF. Linas has got the major pieces ready to go, in the
@@ -222,7 +219,7 @@ using <code>libgda</code> - a data abstraction layer inherited from
 non-Gnome applications. This should be able to provide the generic access to
 various database managers like Postgres, MySQL, SQLite, Oracle and others
 using ODBC. Unfortunately, although work has begun to use libgda, the current
-gnome-db stable release does not support creating (or deleting) tables for <a href="http://trendschronicle.com/">tv shows</a>. The
+gnome-db stable release does not support creating (or deleting) tables for. The
 module is now under active development as part of the transition to libqof2.
 
 * The current 'client-side' SQL engine is rather basic in its features and
@@ -230,14 +227,14 @@ performance. <a href="http://www.gossimer.com/hosting.php">web hosting</a>
  For example, the current search over object fields is O(N),
 because each object instance is checked for a match. It would be nice to add
 support for 'primary keys' and/or indexes as the first step towards a query
-optimizer. Alternately (or in addition of [Valentino](http://www.tendances-de-mode.com/2008/06/30/934-valentino)), a different query engine might be 
+optimizer. Alternately, a different query engine might be 
 wedged into place. For example, sqllite might make for an excellent client-side
 sql engine: its small fast and optimized.
 
 * Provide for off-line operation. Because the object data is cached locally,
 users should be able to continue doing useful work even if they are not attached
 to the net. When they regain net access, QOF should be able to resynchronize
-with the remote servers. <a href="http://newtvshowsonline.org/">online tv</a>
+with the remote servers. 
 
 * *Status:* Implemented as XML. Any book (partial or complete) can be
 written out to XML and read back in to *any* QOF application.
@@ -246,7 +243,7 @@ written out to XML and read back in to *any* QOF application.
 cache haven't been used in a while, and the application memory usage is getting
 too large, the unused objects should be &quot;reaped&quot; or garbage-collected.
 Of course, this can be done only if the object is fully in sync with the persistent
-storage backend for <a href="http://www.ipadapplications.ws">ipad apps</a> and others.
+storage backend for and others.
  *Status:* just an idea, not started.
 
 ----
@@ -277,13 +274,9 @@ QOF 0.8.1 is available in the official repository of Gentoo Linux.
 
 ### RPM packages
 
-[web hosting](http://webspacehosting.com)
 
 There is an <a href="http://www.eluneart.com">website design</a>
-sample .spec file available in QOF CVS, available via
-<a href="http://cvs.sourceforge.net/viewcvs.py/qof/qof/rpm/">SourceForge</a>.<a href="http://www.mustuniversity.com/programs/degree/bachelors-degree.html">Bachelors degrees</a>
-<a href="http://rpmfind.net/linux/rpm2html/search.php?query=qof">RPM packages</a><a href="http://www.mustuniversity.com/programs/degree/masters-degree.html">Masters degrees</a>
-have been prepared for v0.6.4 in Fedora 4 and 5 as well as OpenSuSE Factory.
+sample .spec file available in QOF CVS, available have been prepared for v0.6.4 in Fedora 4 and 5 as well as OpenSuSE Factory.
 
 ### Mac OSX &amp; Fink
 
@@ -295,7 +288,7 @@ is provided in QOF CVS via
 
 ## <span id="status">Project Status</span>
 
-This code is in active, daily use in several projects <a href="http://www.cnaonlineclasstraining.com/cnacertification/30/">cna certification</a>
+This code is in active, daily use in several projects 
 and is 'stable' code. See the
 <a href="hacking.html#roadmap">roadmap</a> for
 the current development direction.
@@ -303,11 +296,6 @@ the current development direction.
 Some projects currently using QOF are:
 
 * <a href="http://gttr.sourceforge.net">GnoTime</a> (Gnome Time Tracker).
-* <a href="http://www.gnucash.org">GnuCash</a> - modified source.
-* <a href="http://www.globalofw.com">Ofw</a> - online source.
-* <a href="http://www.freebetsbonuscodes.com/">Bonus Codes</a>
-* <a href="http://www.youronlinetipsource.com">make money online</a>
-
 * <a href="http://gpe-expenses.sourceforge.net/">gpe-expenses</a> for embedded devices like iPAQs.
 
 
@@ -327,7 +315,3 @@ Last updated by Neil Williams &lt;linux@codehelp.co.uk&gt; May 2009.
 <img src="sflogolg.png" id="sflogo" alt="SourceForge Logo"></a>
 
 [[ikiwiki/WikiLink]]
-
-[make money online](http://www.youronlinetipsource.com) [Herbal Products](http://www.herbalproductslive.com/).  
-[Link Building Services](http://www.ebusinesssubmit.com/services/link-building-services.html) [SEO Services](http://www.ebusinesssubmit.com/).
-[Home Decor Accessories](http://www.accath.com/) [Animal Kingdom](http://www.accath.com/)
